# packages/wallet-desktop-openapi/openapi.yaml
@@ -136,7 +136,7 @@ paths:
                 $ref: '#/components/schemas/IdentitySelectOutput'
   /identities/{did}/sign:
     post:
-      summary: Gets an identity selected by the user.
+      summary: Signs a message
       operationId: identitySign
       x-eov-operation-handler: identities
       tags:
@@ -156,11 +156,59 @@ paths:
               $ref: '#/components/schemas/SignInput'
       responses:
         '200':
-          description: Selected identity
+          description: Signed data
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/SignOutput'
+  /identities/{did}/info:
+    get:
+      summary: Gets extra information of an identity.
+      operationId: identityInfo
+      x-eov-operation-handler: identities
+      tags:
+        - identities
+      parameters:
+        - in: path
+          name: did
+          schema:
+            $ref: '#/components/schemas/did'
+          required: true
+      responses:
+        '200':
+          description: Identity data
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: true
+  /identities/{did}/deploy-tx:
+    post:
+      summary: Signs and deploys a transaction
+      operationId: identityDeployTransaction
+      x-eov-operation-handler: identities
+      tags:
+        - identities
+      parameters:
+        - in: path
+          name: did
+          schema:
+            $ref: '#/components/schemas/did'
+          required: true
+      requestBody:
+        description: Transaction to sign and deploy
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Transaction'
+      responses:
+        '200':
+          description: Selected identity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Receipt'
   /resources:
     get:
       summary: List all resources
@@ -240,6 +288,28 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+  /transaction/deploy:
+    post:
+      summary: Deploy a signed transaction
+      operationId: transactionDeploy
+      x-eov-operation-handler: transaction
+      tags:
+        - transaction
+      requestBody:
+        description: Create a resource.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignedTransaction'
+      responses:
+        '200':
+          description: Deployment OK
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
 components:
   schemas:
     IdentitySelectOutput:
@@ -254,6 +324,23 @@ components:
       title: SignInput
       oneOf:
         - $ref: '#/components/schemas/SignTransaction'
+        - $ref: '#/components/schemas/SignRaw'
+    SignRaw:
+      title: SignRaw
+      type: object
+      properties:
+        type:
+          enum:
+            - Raw
+        data:
+          type: object
+          properties:
+            payload:
+              description: Base64Url encoded data to sign
+              type: string
+              pattern: ^[A-Za-z0-9_-]+$
+          required:
+            - payload
     SignTransaction:
       title: SignTransaction
       type: object
@@ -266,9 +353,14 @@ components:
     Transaction:
       title: Transaction
       type: object
+      additionalProperties: true
       properties:
         from:
           type: string
+        to:
+          type: string
+        nonce:
+          type: number
     SignOutput:
       title: SignOutput
       type: object
@@ -277,11 +369,20 @@ components:
           type: string
       required:
         - signature
+    Receipt:
+      title: Receipt
+      type: object
+      properties:
+        receipt:
+          type: string
+      required:
+        - receipt
     SignTypes:
       title: SignTypes
       type: string
       enum:
         - Transaction
+        - Raw
     IdentityListInput:
       title: IdentityListInput
       description: A list of DIDs
@@ -404,6 +505,14 @@ components:
       type: string
       enum:
         - VerifiableCredential
+    SignedTransaction:
+      title: SignedTransaction
+      description: A list of resources
+      type: object
+      properties:
+        transaction:
+          type: string
+          pattern: ^0x(?:[A-Fa-f0-9])+$
     did:
       title: DID
       type: string
